--- a/WebService_Spring_CXF/.settings/org.eclipse.wst.common.component
+++ b/WebService_Spring_CXF/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="WebService_CXF_Spring">
+    <wb-module deploy-name="WebService_CXF_Spring_Server">
         <wb-resource deploy-path="/" source-path="/WebRoot" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/config"/>
-        <property name="java-output-path" value="/WebService_CXF_Spring/WebRoot/WEB-INF/classes"/>
-        <property name="context-root" value="WebService_CXF_Spring"/>
+        <property name="java-output-path" value="/WebService_CXF_Spring_Server/WebRoot/WEB-INF/classes"/>
+        <property name="context-root" value="WebService_CXF_Spring_Server"/>
     </wb-module>
 </project-modules>
